feat(styles): add desktop header

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
     "@remix-run/eslint-config",
     "@remix-run/eslint-config/node",
     "prettier"
-  ]
+  ],
+  "rules": {
+    "jsx-a11y/anchor-is-valid": "off"
+  }
 }
